use flexbox to wrap settings tiles correctly new icon for different tags ignore test files in codeclimate test

--- a/src/pages/Player/Player.module.css
+++ b/src/pages/Player/Player.module.css
@@ -12,7 +12,6 @@
     display: block;
     float: left;
     margin-left: 20px;
-    margin-top: 25px;
     margin-top: 20px;
     width: 60%;
 }
